[package]
name = "tch"
version = "0.3.1"
authors = ["Laurent Mazare <lmazare@gmail.com>"]
edition = "2018"

description = "Rust wrappers for the PyTorch C++ api (libtorch)."
repository = "https://github.com/LaurentMazare/tch-rs"
keywords = ["pytorch", "deep-learning", "machine-learning"]
categories = ["science"]
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
lazy_static = "1.4.0"
libc = "0.2.82"
ndarray = "0.14.0"
rand = "0.8.2"
thiserror = "1.0.23"
torch-sys = { version = "0.3.1", path = "torch-sys" }
zip = "0.5.9"
half = "1.7.1"

cpython = { version = "0.5.2", optional = true }

[dev-dependencies]
anyhow = "1.0.38"

[workspace]
members = ["torch-sys"]

[features]
python = ["cpython"]
doc-only = ["torch-sys/doc-only"]
cuda-tests = []

[package.metadata.docs.rs]
features = [ "doc-only" ]

[[example]]
name = "reinforcement-learning"
required-features = ["python"]
