[package]
name = "tch"
version = "0.9.0"
authors = ["Laurent Mazare <lmazare@gmail.com>"]
edition = "2018"

description = "Rust wrappers for the PyTorch C++ api (libtorch)."
repository = "https://github.com/LaurentMazare/tch-rs"
keywords = ["pytorch", "deep-learning", "machine-learning"]
categories = ["science"]
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
lazy_static = "1.3.0"
libc = "0.2.0"
ndarray = "0.15"
rand = "0.8"
thiserror = "1"
torch-sys = { version = "0.9.0", path = "torch-sys" }
zip = "0.6"
half = "1.6"

cpython = { version = "0.2.0", optional = true }
regex = { version = "1.6.0", optional = true }

[dev-dependencies]
anyhow = "1"

[workspace]
members = ["torch-sys"]

[features]
default = ["torch-sys/download-libtorch"]
python = ["cpython"]
doc-only = ["torch-sys/doc-only"]
cuda-tests = []

[package.metadata.docs.rs]
features = [ "doc-only" ]

[[example]]
name = "reinforcement-learning"
required-features = ["python"]

[[example]]
name = "stable-diffusion"
required-features = ["regex"]
