[package]
name = "tch-bindgen"
version = "0.1.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
fstrings = "0.2.3"
itertools = "0.10.0"
lazy_static = "1.4.0"
maplit = "1.0.2"
proc-macro2 = "1.0.24"
quote = "1.0.8"
serde = { version = "1.0.120", features = ["derive"] }
serde_yaml = "0.8.15"
unzip-n = "0.1.2"
structopt = "0.3"
indexmap = "1.6.1"
